--- a/webpage.html
+++ b/webpage.html
@@ -8,27 +8,32 @@
 
   <body>
 
-    <form>
+    <table>
 
-      <p>Username: <input type = 'text' placeholder = 'your username'></p>
+      <thead>
 
-      <p>Stay logged in: <input type = 'checkbox' checked></p>
+        <tr>
+          <th>Name</th>
+          <th>Doing</th>
+        </tr>
 
-      <p>Under 18: <input type = 'radio' name = 'age' value = 'u18'></p>
-      <p>Over 18: <input type = 'radio' name = 'age' value = 'o18'></p>
+      </thead>
 
-      <p>Favourite food:
-        <select>
+      <tbody>
 
-          <option>Pizza</option>
-          <option selected>Ice Cream</option>
-          <option>Bacon</option>
+        <tr>
+          <td>Joy</td>
+          <td>Engineering</td>
+        </tr>
 
-        </select>
-      </p>
+        <tr>
+          <td>Happy</td>
+          <td>Schooling</td>
+        </tr>
 
-      <input type = 'submit' value = 'Hit'>
-    </form>
+      </tbody>
+
+    </table>
 
   </body>
 
