--- a/webpage.html
+++ b/webpage.html
@@ -1,21 +1,96 @@
+<!doctype html>
+
 <html>
 
   <head>
 
-      <title> Dipankar's Webpage </title>
+    <title>The Earth</title>
 
   </head>
 
   <body>
 
-    <p id = 'top'><a href = 'https://www.google.com/'><img src = 'm.png'></a></p>
-      <p><a href = 'https://www.google.com/'><img src = 'm.png'></a></p>
-        <p><a href = 'https://www.google.com/'><img src = 'm.png'></a></p>
-          <p><a href = 'https://www.google.com/'><img src = 'm.png'></a></p>
-            <p><a href = 'https://www.google.com/'><img src = 'm.png'></a></p>
-              <p><a href = 'https://www.google.com/'><img src = 'm.png'></a></p>
-    <p><a href = 'https://www.google.com/'><img src = 'm.png'></a></p>
-    <p><a href = '#top'>Back to Top</a></p>            
+    <iframe width="560" align = 'right' height="315" src="https://www.youtube.com/embed/DrDm7uO4Fu0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <h1>Hello World!</h1>
+
+    <h2>A few facts about the world we live in</h2>
+
+    <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Earth_Eastern_Hemisphere.jpg/600px-Earth_Eastern_Hemisphere.jpg'
+   height = '300' title = 'The Earth' alt="Earth's Image">
+
+    <p>
+      Earth is the third planet from the Sun and is the largest of the terrestrial planets. Unlike the other planets in the
+      solar system that are named after classic deities the Earth&#39;s name comes from the Anglo-Saxon
+      word erda which means ground or soil. The Earth was formed approximately 4.54 billion years ago and
+      is the only known planet to support life.
+    </p>
+
+    <hr>
+
+    <h3>About The Earth</h3>
+
+    <ul>
+
+      <li><strong>Mass:</strong> 5,972,190,000,000,000 billion kg</li>
+      <li><strong>Diameter at equator:</strong> 12,756 km</li>
+      <li><strong>Satellites:</strong> <a href='https://space-facts.com/the-moon/'>The Moon</a></li>
+
+    </ul>
+
+    <hr>
+
+    <h3>Top 3 Earth Facts</h3>
+
+    <ol>
+
+      <li>The Earth&#39;s rotation is gradually slowing.</li>
+      <li>A year isn&#39;t exactly 365 days, and the earth doesn&#39;t take 24 hours to rotate</li>
+      <li>70% of the earth&#39;s surface is water, and only one third of its fresh water is unfrozen</li>
+
+    </ol>
+
+    <hr>
+
+    <table>
+
+      <thead>
+
+        <tr>
+          <th>Name</th>
+          <th>Radius</th>
+          <th>Average Temperature</th>
+        </tr>
+
+      </thead>
+
+      <tbody>
+
+        <tr>
+          <td>Mars</td>
+          <td>3,390km</td>
+          <td>-55 &#8451;</td>
+        </tr>
+
+        <tr>
+          <td>Venus</td>
+          <td>6,052km</td>
+          <td>460 &#8451;</td>
+        </tr>
+
+      </tbody>
+
+    </table>
+
+  <hr>
+
+  <p>
+    Want to know more?
+  </p>
+
+  <form action = 'https://space-facts.com/earth/'>
+    <input type = 'submit' value='Click Me'>
+  </form>
 
   </body>
 
